--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <a href="#"><img src="/img/lambda-black.png" alt=""></a>
             <nav>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
 
         </header>
@@ -82,11 +82,11 @@
         
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </footer>
     </div><!-- container -->        
